Fixed small margin left behind when viewing with small screens

--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,8 +1,7 @@
 @use '../config';
 .container{
   display: flex;
-  width: calc(7vw + 45rem);
-
+  width: 100%;
 
   flex-direction: column;
   align-items: center;
@@ -14,6 +13,7 @@
 
 
   @media (min-width : 500px) {
+    width: calc(7vw + 45rem);
     border: .1rem solid config.$color-bg-700;
     border-radius: 3rem;
     margin: 2rem 0;
